# nvenc_h265_transparency

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  utility.hpp
